// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TreeView.Row /> create tree component 1`] = `
<div>
  <div
    className="fd-tree fd-tree--header"
  >
    <div
      className="fd-tree__row fd-tree__row--header"
    >
      <div
        className="fd-tree__col fd-tree__col--control"
      >
        <div>
          <button
            aria-label="expand all"
            aria-pressed={false}
            className="fd-tree__control"
            onClick={[Function]}
          />
          Column Header 1
        </div>
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 2
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 3
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 4
      </div>
    </div>
  </div>
  <ul
    aria-hidden={false}
    className="fd-tree"
    role="tree"
  >
    <li
      aria-expanded={false}
      className="fd-tree__item"
      id="fd-1"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="fd-1"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            First Level
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-2"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              <div>
                <button
                  aria-controls="fd-2"
                  aria-label="expand"
                  aria-pressed={false}
                  className="fd-tree__control"
                  onClick={[Function]}
                />
                Child 1
              </div>
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
          <ul
            aria-hidden={true}
            className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
            role="group"
          >
            <li
              aria-expanded={false}
              className="fd-tree__item"
              id="fd-3"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <div>
                    <button
                      aria-controls="fd-3"
                      aria-label="expand"
                      aria-pressed={false}
                      className="fd-tree__control"
                      onClick={[Function]}
                    />
                    Grandchild 1
                  </div>
                </div>
                <div
                  className="fd-tree__col"
                >
                  Data Col 2
                </div>
                <div
                  className="fd-tree__col"
                >
                  Data Col 3
                </div>
                <div
                  className="fd-tree__col"
                >
                  Data Col 4
                </div>
              </div>
              <ul
                aria-hidden={true}
                className="fd-tree__group fd-tree__group--sublevel-3 is-hidden"
                role="group"
              >
                <li
                  aria-expanded={false}
                  className="fd-tree__item"
                  id="fd-4"
                  role="treeitem"
                >
                  <div
                    className="fd-tree__row"
                  >
                    <div
                      className="fd-tree__col fd-tree__col--control"
                    >
                      GreatGrandchild 1
                    </div>
                    <div
                      className="fd-tree__col"
                    >
                      Data Col 2
                    </div>
                    <div
                      className="fd-tree__col"
                    >
                      Data Col 3
                    </div>
                    <div
                      className="fd-tree__col"
                    >
                      Data Col 4
                    </div>
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-5"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      aria-expanded={false}
      className="fd-tree__item"
      id="fd-6"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="fd-6"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Row 2
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-7"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 1
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-8"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
      </ul>
    </li>
    <li
      aria-expanded={false}
      className="fd-tree__item"
      id="fd-9"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          Row 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
    </li>
    <li
      aria-expanded={false}
      className="fd-tree__item"
      id="fd-10"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="fd-10"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            <a
              href="http://me.com"
            />
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 2
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 3
        </div>
        <div
          className="fd-tree__col"
        >
          Data Col 4
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-11"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Child 1
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 2
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 3
            </div>
            <div
              className="fd-tree__col"
            >
              Data Col 4
            </div>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<TreeView.Row /> create tree component 2`] = `
<div>
  <div
    className="fd-tree fd-tree--header"
  >
    <div
      className="fd-tree__row fd-tree__row--header"
    >
      <div
        className="fd-tree__col fd-tree__col--control"
      >
        <div>
          <button
            aria-label="expand all"
            aria-pressed={false}
            className="fd-tree__control"
            onClick={[Function]}
          />
          Column Header 1
        </div>
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 2
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 3
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 4
      </div>
    </div>
  </div>
  <ul
    aria-hidden={false}
    className="fd-tree"
    role="tree"
  >
    <li
      aria-expanded={false}
      className="fd-tree__item"
      id="fd-12"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="fd-12"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            First Level
          </div>
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-13"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              <div>
                <button
                  aria-controls="fd-13"
                  aria-label="expand"
                  aria-pressed={false}
                  className="fd-tree__control"
                  onClick={[Function]}
                />
                <a
                  href="http://me.com"
                >
                  First Level
                </a>
              </div>
            </div>
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
          </div>
          <ul
            aria-hidden={true}
            className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
            role="group"
          >
            <li
              aria-expanded={false}
              className="fd-tree__item"
              id="fd-14"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <a
                    href="http://amazon.com"
                  >
                    Amazon
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://google.com"
                  >
                    Google
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://bing.com"
                  >
                    Bing
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://yahoo.com"
                  >
                    Yahoo
                  </a>
                </div>
                <div
                  className="fd-tree__col"
                >
                  <a
                    href="http://sap.com"
                  >
                    SAP
                  </a>
                </div>
              </div>
            </li>
            <li
              aria-expanded={false}
              className="fd-tree__item"
              id="fd-15"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <a
                    href="http://amazon.com"
                  >
                    Amazon
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </li>
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-16"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              <div>
                <button
                  aria-controls="fd-16"
                  aria-label="expand"
                  aria-pressed={false}
                  className="fd-tree__control"
                  onClick={[Function]}
                />
                Second Level
              </div>
            </div>
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
          </div>
          <ul
            aria-hidden={true}
            className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
            role="group"
          >
            <li
              aria-expanded={false}
              className="fd-tree__item"
              id="fd-17"
              role="treeitem"
            >
              <div
                className="fd-tree__row"
              >
                <div
                  className="fd-tree__col fd-tree__col--control"
                >
                  <a
                    href="http://amazon.com"
                  >
                    Amazon
                  </a>
                </div>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<TreeView.Row /> create tree component 3`] = `
<div>
  <div
    className="fd-tree fd-tree--header"
  >
    <div
      className="fd-tree__row fd-tree__row--header"
    >
      <div
        className="fd-tree__col fd-tree__col--control"
      >
        <div>
          <button
            aria-label="expand all"
            aria-pressed={false}
            className="fd-tree__control"
            onClick={[Function]}
          />
          Column Header 1
        </div>
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 3
      </div>
      <div
        className="fd-tree__col"
      >
        Column Header 4
      </div>
    </div>
  </div>
  <ul
    aria-hidden={false}
    className="fd-tree"
    role="tree"
  >
    <li
      aria-expanded={false}
      className="fd-tree__item"
      id="fd-18"
      role="treeitem"
    >
      <div
        className="fd-tree__row"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-controls="fd-18"
              aria-label="expand"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            First Level
          </div>
        </div>
      </div>
      <ul
        aria-hidden={true}
        className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
        role="group"
      >
        <li
          aria-expanded={false}
          className="fd-tree__item"
          id="fd-19"
          role="treeitem"
        >
          <div
            className="fd-tree__row"
          >
            <div
              className="fd-tree__col fd-tree__col--control"
            >
              Second level
            </div>
            <div
              className="fd-tree__col"
            />
            <div
              className="fd-tree__col"
            />
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
